--- a/views/login.pug
+++ b/views/login.pug
@@ -1,16 +1,13 @@
 extends layout
 
-block content
-  h1= title
-  
-  script(src='javascripts/temp.js')
-  script(src='https://apis.google.com/js/platform.js', async='', defer='')
+block head  
+  script(src='https://apis.google.com/js/platform.js')
   meta(name='google-signin-client_id', content='152034815125-q5a1uo5vqaf9ki1r7f8nf41qu07qu2v8.apps.googleusercontent.com')
   meta(name='google-signin-cookiepolicy', content='single_host_origin')
   meta(name='google-signin-scope', content='profile email')
+  script(src='javascripts/login_client.js')
 
-  button(type='button') Click Me!
-
-  form(method='post', action='/login')
-    .g-signin2(data-onsuccess='onSignIn', data-theme='dark')
+block content
+  h1= title
+  .g-signin2(data-onsuccess='onSignIn', data-theme='white')
     
