--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,8 +3,8 @@ html
   head
     block title
     link(rel="stylesheet", href="https://fonts.googleapis.com/icon?family=Material+Icons")
-    link(rel="stylesheet", href="https://code.getmdl.io/1.3.0/material.red-blue.min.css")
-    link(rel="stylesheet", href="stylesheets/material.min.css")
+    link(rel="stylesheet", href="https://code.getmdl.io/1.3.0/material.min.css")
+    //- link(rel="stylesheet", href="stylesheets/material.min.css")
     script(src="https://code.getmdl.io/1.3.0/material.min.js")
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js")
     block head
